# kings_C_programming_exercises_and_projects

./: CMakeLists.txt  library.c
Exercises/Chapter3/Exercise2/: exercise2.c
Exercises/Chapter3/Exercise6/: exercise6.c
Exercises/Chapter5/Exercise11/: exercise11.c
Exercises/Chapter5/Exercise5/: exercise5.c
Exercises/exercise_3/: exercise_3.c
Projects/Chapter2/Project5/: project5.c
Projects/Chapter3/Project1/: project1.c
Projects/Chapter3/Project2/: project2.c
Projects/Chapter3/Project3/: project3.c
Projects/Chapter3/Project4/: project4.c
Projects/Chapter3/Project5/: project5.c
Projects/Chapter3/Project6/: project6.c
Projects/Chapter4/Project1/: project1.c
Projects/Chapter4/Project2/: project2.c
Projects/Chapter4/Project4/: project4.c
Projects/Chapter4/Project5/: project5.c
Projects/Project1/: project1.c
Projects/Project2/: project2.c
Projects/Project4/: project4.c
Projects/Project6/: project6.c
Projects/Project7/: project7.c
Projects/Project8/: project8.c
